[tool.poetry]
name = "proxy api testing"
version = "0.1.0"
description = ""
authors = ["Sergryap <rs1180@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.4"
environs = "9.5.0"
httpx = "0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
